<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="makisp.gohome.RegisterActivity"
    android:background="@drawable/bg">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/TextPassword"
        android:hint="@string/text_password2"
        android:layout_below="@+id/TextUserName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:digits="_qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM0123456789"
        android:fontFamily="sans-serif-condensed" />

    <Button
        android:text="@string/button_register2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="38dp"
        android:id="@+id/buttonEgrafh"
        android:layout_below="@+id/TextPassword"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:fontFamily="sans-serif-condensed"
        android:textSize="14sp"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/button_login2"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:id="@+id/buttonsyndesh"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/buttonEgrafh"
        android:layout_alignEnd="@+id/buttonEgrafh"
        style="@style/Widget.AppCompat.Button.Colored"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/TextUserName"
        android:hint="@string/text_username2"
        android:layout_marginTop="59dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:digits="_qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM0123456789!"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView16"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="normal|bold"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
