...
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"

    class="com.google.android.gms.maps.SupportMapFragment" />

    <Button
        android:id="@+id/buttonProfile"
        android:layout_height="50dp"
        android:minWidth="160sp"
        android:layout_width="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
...
        android:layout_marginLeft="5dp"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="normal|italic"
        android:fontFamily="sans-serif-condensed" />

    <Button
        android:id="@+id/buttonItems"
        android:layout_height="50dp"
        android:minWidth="160sp"
        android:layout_width="50dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/ic_clipboard_white_48dp"
...
